<resources>
    <string name="app_name">Coffee Right App</string>
    <string name="welcome_page">Coffee for\nEveryone</string>
    <string name="get_started">Get Started</string>
    <string name="welcome">Welcome!</string>
    <string name="main_page_desc">Get a cup of coffee for free only \nfor new user</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="profile">Profile</string>
    <string name="order">Order</string>
    <string name="setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign out</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="login_text">Log \nin</string>
    <string name="signup_text">Sign \nup</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="create_account">Create Account</string>
    <string name="dont_worry">Don\'t \nWorry!</string>
    <string name="enter_your_email_address_to_get_reset_password_link">Enter your email address to get \nreset password link</string>
    <string name="send_link">Send Link</string>
    <string name="start_ordering">Start ordering</string>
    <string name="hit_the_brown">Hit the brown button down \nbelow to Create an order</string>
    <string name="no_history_yet">No history yet</string>
    <string name="swipe_on_an_item_to_delete">Swipe on an item to delete</string>
    <string name="order_history">Order History</string>
    <string name="text_home_page">A good coffee is\na good day</string>
    <string name="favorite_product">Favorite product</string>
    <string name="see_more">See more</string>
    <string name="promo_for_you">Promo for you</string>
    <string name="no_orders_yet">No orders yet</string>
    <string name="save">Save</string>
    <string name="hint_current_password">Enter your current password</string>
    <string name="hint_new_password">Enter your new password</string>
    <string name="hint_confirm_new_password">Confirm your new password</string>
    <string name="btn_change_password">Change Password</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="arrowback">arrowBack</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="etName">Name :</string>
    <string name="etYourName">Enter your name</string>
    <string name="tvEmailAddress">Email address :</string>
    <string name="etYourEmail">Enter your email adress</string>
    <string name="tvPhoneNumber">Phone Number :</string>
    <string name="etYourNumberPhone">Enter your Phone Number</string>
    <string name="tvDoB">Date of birth :</string>
    <string name="etYourDoB">Enter your Date of birth</string>
    <string name="etAddress">Enter your Delivery Address</string>
    <string name="matButtonSaveUpdate">Save and Update</string>
    <string name="tvAddress">Delivery address :</string>
    <string name="imageviewprofile">imageViewProfile</string>
    <string name="bank_account">Bank Account</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="card">Card</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="history">History</string>
    <string name="reset_password">Reset Password</string>
    <string name="edit_password">Edit Password</string>
</resources>