<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_order"
            android:title="@string/order" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_order_hsitory"
            android:title="@string/history" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
    </group>
</menu>