<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_maincontent"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.istekno.coffeebreakapp.main.maincontent.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.istekno.coffeebreakapp.main.maincontent.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_order"
        android:name="com.istekno.coffeebreakapp.main.maincontent.OrderFragment"
        android:label="@string/order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.istekno.coffeebreakapp.main.maincontent.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />

</navigation>