<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/theme_grey"
            android:paddingHorizontal="35dp"
            tools:context=".activity.customer.profile.EditProfileActivity">

            <ImageView
                android:id="@+id/iv_back"
                android:src="@drawable/ic_arrow_left_choco"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/edit_profile"
                android:textColor="@color/theme_choco"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_back"
                app:layout_constraintTop_toTopOf="@+id/iv_back" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_edit_profile">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/image_profile"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_avatar_en"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearance="@style/rounded_image" />

                <Button
                    android:id="@+id/btn_change_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_edit"
                    app:layout_constraintBottom_toBottomOf="@id/image_profile"
                    app:layout_constraintRight_toRightOf="@id/image_profile"
                    app:shapeAppearance="@style/rounded_image" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/etName"
                    android:textColor="@color/textEditProfile"
                    android:textSize="13sp"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image_profile" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperTextTextColor="@color/textEditProfile"
                    app:hintEnabled="false"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name">

                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:gravity="left"
                        android:hint="@string/etYourName"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        tools:ignore="RtlHardcoded" />

                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"

                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/input_layout_name">

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="@string/female" />

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:text="@string/male" />

                </RadioGroup>

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/tvEmailAddress"
                    android:textColor="@color/textEditProfile"
                    android:textSize="13sp"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/radio_button" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperTextTextColor="@color/textEditProfile"
                    app:hintEnabled="false"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:gravity="left"
                        android:hint="@string/etYourEmail"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        tools:ignore="RtlHardcoded" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/tvPhoneNumber"
                    android:textColor="@color/textEditProfile"
                    android:textSize="13sp"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/input_layout_email" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperTextTextColor="@color/textEditProfile"
                    app:hintEnabled="false"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phone">

                    <EditText
                        android:id="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:gravity="left"
                        android:hint="@string/etYourNumberPhone"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        tools:ignore="RtlHardcoded,TextFields" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/dob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/tvDoB"
                    android:textColor="@color/textEditProfile"
                    android:textSize="13sp"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/input_layout_phone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperTextTextColor="@color/textEditProfile"
                    app:hintEnabled="false"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dob">

                    <EditText
                        android:id="@+id/et_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:focusable="false"
                        android:gravity="left"
                        android:hint="@string/etYourDoB"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        tools:ignore="RtlHardcoded" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/tvAddress"
                    android:textColor="@color/textEditProfile"
                    android:textSize="13sp"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/input_layout_dob" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperTextTextColor="@color/textEditProfile"
                    app:hintEnabled="false"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/address">

                    <EditText
                        android:id="@+id/et_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:gravity="left"
                        android:hint="@string/etAddress"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        tools:ignore="RtlHardcoded" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_save_update"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp"
                    android:backgroundTint="@color/theme_choco"
                    android:fontFamily="@font/poppins_extrabold"
                    android:text="@string/matButtonSaveUpdate"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:cornerRadius="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/input_layout_address" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>