<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme_grey">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="31dp"
            tools:context=".main.login.LoginActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/iv_ilus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <ImageView
                    android:id="@+id/iv_signup"
                    android:layout_width="164dp"
                    android:layout_height="328dp"
                    android:src="@drawable/img_login"
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="39dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_text"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="65sp"
                    android:lineSpacingExtra="-35dp"
                    android:layout_marginStart="143dp"
                    android:layout_marginTop="108dp"
                    app:layout_constraintLeft_toLeftOf="@+id/iv_signup"
                    app:layout_constraintTop_toTopOf="@id/iv_signup" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email_address"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/iv_ilus"
                app:layout_constraintLeft_toLeftOf="parent">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="16sp"
                    android:backgroundTint="@color/theme_grey"
                    android:textColorHint="#9A9A9D" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/ti_email"
                app:endIconMode="password_toggle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:helperText="min. length 8 characters"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/theme_choco">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/theme_grey"
                    android:inputType="textPassword"
                    android:fontFamily="@font/poppins_regular"
                    android:textColorHint="#9A9A9D"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:fontFamily="@font/poppins_regular"
                android:textColor="#895537"
                android:textSize="12sp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/ti_password"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/login"
                android:textSize="17sp"
                android:textAllCaps="false"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginBottom="120dp"
                android:layout_marginTop="22dp"
                app:cornerRadius="15dp"
                app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>

