<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="24dp"
        tools:context=".main.orderhistory.OrderHistoryActivity">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="6dp"
            android:layout_height="12dp"
            android:scaleType="center"
            android:src="@drawable/ic_row_left"
            app:layout_constraintBottom_toBottomOf="@id/tv_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_history"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe_on_an_item_to_delete"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="44dp"
            android:drawablePadding="8dp"
            app:drawableLeftCompat="@drawable/ic_swipe" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_order_history"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="22dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_no_history_yet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_info" />

        <TextView
            android:id="@+id/tv_no_history_yet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="You have no history yet"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/history_not_found"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_no_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_no_history"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="250dp"
                 />

            <TextView
                android:id="@+id/tv_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_history_yet"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_extrabold"
                android:textSize="28sp"
                android:layout_marginTop="26dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_no_history"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/tv_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hit_the_brown"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_start_order"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/start_ordering"
                android:textSize="17sp"
                android:textAllCaps="false"
                android:fontFamily="@font/poppins_bold"
                app:cornerRadius="15dp"
                android:layout_gravity="end"
                android:layout_marginHorizontal="50dp"
                android:layout_marginBottom="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
